# beetle

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml
.claude/: settings.local.json
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: command.rs  lib.rs  main.rs  result.rs  runner.rs  server.rs  static_files.rs
apps/cli/src/command/: create.rs  delete.rs  formatter.rs  list.rs  new.rs  option.rs  query.rs  remove.rs  runner.rs  search.rs  serve.rs  update.rs
apps/cli/src/command/formatter/: json.rs  text.rs  utils.rs
apps/cli/tests/: e2e_test.rs
apps/cli/tests/fixtures/c_project_add/: main.c
apps/webui/: .cta.json  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/webui/src/: routeTree.gen.ts
crates/beetle_engine/: Cargo.toml
crates/beetle_engine/src/: document.rs  formatter.rs  index_manager.rs  lib.rs  query.rs  schema.rs  search.rs  utils.rs
crates/engine/: Cargo.toml
crates/engine/src/: catalog.rs  change.rs  document.rs  (+13 more)
docs/: beetle_index_engine_detailed_design.md  debugging-e2e-test-failures.md  design.md  webui-embed-design.md
docs/prd/: 01-executive-summary.md  02-user-personas.md  03-functional-requirements.md  04-non-functional-requirements.md  05-technical-architecture.md  06-success-metrics.md  07-roadmap.md  README.md  webui-homepage-design.md
docs/tech-designs/: file-status-index.md  parallel-indexing-performance.md  schema-improvement-plan.md  share-state-for-http-requests.md
editors/vscode/: README.md  package.json  tsconfig.json
src/: lib.rs  main.rs
tests/: cli_tests.rs  edge_cases.rs
(+20 files in other folders)
