[package]
name = "beetle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beetle"
path = "src/main.rs"

[dependencies]
beetle_engine = { path = "../../crates/beetle_engine" }
bpaf = "0.9"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"
