[package]
name = "beetle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beetle"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
beetle_engine = { path = "../../crates/beetle_engine" }
bpaf = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = "3.0"
